# fishwatch

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  README.md  REDESIGN.md  TASK_BRIEF.md  package-lock.json  package.json  score-fish-business-analysis.md  score-fish-seo-roadmap.md  score-fish-seo-strategy.md
.github/: dependabot.yml
.github/workflows/: ci.yml  gauge.yml  refresh-engagement.yml  scrape.yml
.stitch/: homepage.html
apps/web/: .env.example  eslint.config.mjs  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  vitest.config.ts
apps/web/app/: globals.css  icon.tsx  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  (+1 more)
docs/rollbacks/: pnw-fly-fishing-source.md
jobs/: IMPLEMENTATION.md  conftest.py  db.py  pyproject.toml  requirements.txt
jobs/extractor/: main.py  parser.py  prompt.py
jobs/scorer/: composite.py  consensus.py  flow_score.py  fly_ranking.py  main.py  sentiment_score.py
jobs/scraper/: config.py  format_summary.py  main.py  models.py  refresh_engagement.py
jobs/scraper/sources/: base.py  caddis_fly.py  confluence.py  deschutes_angler.py  deschutes_camp.py  fly_and_field.py  fly_fish_food.py  fly_fishers.py  odfw.py  owrd.py  pnw_fly_fishing.py  silver_bow.py  silver_creek_outfitters.py  usgs.py
jobs/tests/: test_caddis_fly_scraper.py  test_composite.py  test_consensus.py  test_extractor_exit.py  test_extractor_parser.py  test_flow_score.py  test_fly_ranking.py  test_owrd.py  test_parser.py  test_pnw_fly_fishing_scraper.py  test_refresh_engagement.py  test_sentiment_score.py
(+97 files in other folders)
