[project]
name = "fishsignal-jobs"
version = "0.1.0"
description = "FishSignal offline data processing jobs"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "anthropic>=0.40.0",
    "psycopg2-binary>=2.9.0",
    "playwright>=1.44.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py311"
src = ["."]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"extractor/prompt.py" = ["E501"]
